# clifford-number

./: README.md  cliffordnumber.ipynb  requirements.txt  setup.cfg
.ipynb_checkpoints/: cliffordnumber-checkpoint.ipynb
