# This file specifies the dependencies of our clifford-number package.
# Together with pyproject.toml, it is used by pip to install the package.

# Install with: pip install -e .
# Install extras with: pip install -e ".[notebook]"

[metadata]
name = clifford-number
version = 0.0.1

[options]
packages = find:
install_requires =
    sympy==1.12.0
    json==2.0.9

[options.extras_require]
notebook = 
    jupyter==1.0.0
    ipykernel==6.24.0
    nbformat==5.9.0
